Ingress/neuralix_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neuralix-main-ingress
  annotations:
    kubernetes.io/ingress.class: azure-application-gateway
    appgw.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: neuralix.apforge.info
    http:
      paths:

      # Frontend → /
      - path: /()(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend-svc-ai
            port:
              number: 9000

      # Backend GET → /api/get/*
      - path: /api/get(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: backend-get-svc-ai
            port:
              number: 9030

      # Backend ADD → /api/add/*
      - path: /api/add(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: backend-add-svc-ai
            port:
              number: 9020
